--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,26 @@
 .outer-square {
   /* your css goes here */
+  display: flex;
+  flex-wrap: wrap;
+  background-color: #eee;
+  width: 600px;
+  height: 600px;
+  justify-content: space-evenly;
 }
 .inner-square {
   /* your css goes here */
+  width: 180px;
+  height: 180px;
+  background-color: green;
+ margin: 10px;
 }
 .circle {
   /* your css goes here */
+  width: 180px;
+  height: 180px;
+  background-color: blue;
+  border-radius: 50%;
+  margin: 10px;
 }
+
+
