--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,19 @@
 .outer-square {
   /* your css goes here */
-  display: flex;
-  flex-wrap: wrap;
-  width: 600px;
-  height: 600px;
-  justify-content: space-evenly;
+   display: grid;
+   grid-template-rows: 1fr 1fr 1fr;
+   grid-template-columns: 1fr 1fr 1fr ;
+   width: 600px;
+   height: 600px;
+   justify-content: space-evenly;
 }
 .inner-square {
   /* your css goes here */
-  width: 180px;
-  height: 180px;
   background-color: green;
  margin: 10px;
 }
 .circle {
   /* your css goes here */
-  width: 180px;
-  height: 180px;
   background-color: blue;
   border-radius: 50%;
   margin: 10px;
